Fixed body not spanning full height, causing snow to get cut off, if dashboard didn't fill whole browser height

--- a/src/app.css
+++ b/src/app.css
@@ -31,8 +31,8 @@
 	--error: hsl(0, 80%, 60%);
 	--errorSecondary: hsl(0, 80%, 20%);
 
-    --info: hsl(204, 100%, 50%);
-    --infoSecondary: hsl(204, 100%, 15%);
+	--info: hsl(204, 100%, 50%);
+	--infoSecondary: hsl(204, 100%, 15%);
 
 	--cellSize: 128px;
 	--cellGap: 1rem;
@@ -48,4 +48,5 @@ body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	min-height: 100vh;
 }
